--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "serve": "node server.js",
       "build": "cd client && npm run build",
       "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-      "start": "concurrently --kill-others-on-fail \"yarn serve\" \"yarn client\"",
+      "start": "yarn serve && yarn client",
       "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
     },
     "dependencies": {
