--- a/package.json
+++ b/package.json
@@ -1,29 +1,28 @@
 {
-    "name": "eleclothing-server",
-    "version": "1.0.0",
-    "engines":{
-        "node": "12.14.1",
-        "npm": "6.13.4"
-    },
-    "scripts": {
-      "client": "cd client && yarn start",
-      "server": "nodemon server.js",
-      "serve": "node server.js",
-      "build": "cd client && npm run build",
-      "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
-      "start": "yarn serve && yarn client",
-      "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
-    },
-    "dependencies": {
-      "body-parser": "^1.18.3",
-      "compression": "1.7.4",
-      "cors": "2.8.5",
-      "dotenv": "7.0.0",
-      "express": "^4.16.4",
-      "stripe": "6.28.0"
-    },
-    "devDependencies": {
-      "concurrently": "^4.0.1"
-    }
+  "name": "eleclothing-server",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.14.1",
+    "npm": "6.13.4"
+  },
+  "scripts": {
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "serve": "node server.js",
+    "build": "cd client && npm run build",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "start": "yarn serve && yarn client",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "compression": "^1.7.4",
+    "cors": "2.8.5",
+    "dotenv": "7.0.0",
+    "express": "^4.16.4",
+    "stripe": "6.28.0"
+  },
+  "devDependencies": {
+    "concurrently": "^4.0.1"
   }
-  
+}
